<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/content_movie"
        android:src="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/text_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/text_genre"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/text_duration"
        tools:ignore="ContentDescription"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/dateline"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/text_genre" />


    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/text_rating"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/img_star"
        app:layout_constraintTop_toTopOf="@+id/img_star" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="3dp"
        android:text="@string/text_rating_max"
        app:layout_constraintBottom_toBottomOf="@+id/text_rating"
        app:layout_constraintStart_toEndOf="@+id/text_rating"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/text_rating_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rating_user"
        app:layout_constraintStart_toStartOf="@+id/text_rating"
        app:layout_constraintTop_toBottomOf="@+id/text_rating" />

    <TextView
        android:id="@+id/text_title_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_title_description"
        android:textColor="@color/black"
        tools:viewBindingIgnore="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_title_writer"
        app:layout_constraintTop_toBottomOf="@+id/text_title_writer" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:foregroundGravity="center_horizontal"
        android:src="@color/purple_500"
        tools:viewBindingIgnore="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_title_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_title_director"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:viewBindingIgnore="true"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_director"
        app:layout_constraintStart_toEndOf="@+id/text_title_director"
        app:layout_constraintTop_toTopOf="@+id/text_title_director" />

    <TextView
        android:id="@+id/text_title_writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_title_writer"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:viewBindingIgnore="true"
        app:layout_constraintStart_toStartOf="@+id/text_title_director"
        app:layout_constraintTop_toBottomOf="@+id/text_title_director" />

    <TextView
        android:id="@+id/text_writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_director"
        app:layout_constraintBottom_toBottomOf="@+id/text_title_writer"
        app:layout_constraintStart_toEndOf="@+id/text_title_writer"
        app:layout_constraintTop_toTopOf="@+id/text_title_writer"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:text="@string/text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
