<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.imbb.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" >
        <action
            android:id="@+id/action_navigation_home_to_detailMovieActivity"
            app:destination="@id/detailMovieActivity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@id/detailMovieActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tvseries"
        android:name="com.dicoding.imbb.ui.tvshow.TvShowFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dicoding.imbb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/detailMovieActivity"
        android:name="com.dicoding.imbb.ui.detailmovie.DetailMovieActivity"
        android:label="DetailMovieActivity" />
</navigation>